[package]
name = "wifi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.14"
tokio = { version = "1", features = ["full"] }


[profile.release]
strip = true
lto = true
codegen-units = 1



[package.metadata.cross.target.x86_64-pc-windows-gnu]
xargo = false
# image = "test-image"
# runner = "custom-runner"